# biofilm-pipeline

./: .gitignore  README.md  final_data_pipeline.py  main.py  organize.py  organize_data.py  pyproject.toml  sbatch_sweep.sh  sweep_runner.py  sweep_runner.yml  test.py  test_create_labels.py  test_data_display.py  test_data_pipeline.py  test_data_pipeline_cnn_test.py  test_dataset.py  test_display_split.py  test_model_pipeline.py  test_patch.py  test_presentation_slides.py  test_transforms.py  utils.py
data_loading/: biofilm_preprocess.py  dataset.py  release_preprocess.py
data_pipeline/: biofilm_preprocess.py  dataset.py  release_preprocess.py
model_pipeline/: cnn_models.py  training.py
models/: cnn.py  factory.py
raw_data_reorganized/biofilm/: biofilm_DNaseI_07-02-2025_1.tif  biofilm_DNaseI_07-02-2025_3.tif  biofilm_DNaseI_07-02-2025_5.tif  biofilm_DNaseI_07-02-2025_6.tif  biofilm_DNaseI_07-08-2025_1.tif  biofilm_DNaseI_07-08-2025_2.tif  biofilm_NaIO4_07-02-2025_3.tif  biofilm_NaIO4_07-02-2025_4.tif  biofilm_NaIO4_07-08-2025_2.tif  biofilm_NaIO4_07-08-2025_3.tif  biofilm_ProtK_07-02-2025_8.tif  biofilm_ProtK_07-08-2025_5.tif  biofilm_Untreated_07-02-2025_2.tif  biofilm_Untreated_07-02-2025_5.tif  biofilm_Untreated_07-08-2025_1.tif  biofilm_pH10_07-02-2025_2.tif  biofilm_pH10_07-02-2025_6.tif
raw_data_reorganized/release/: release_NaIO4_07-02-2025_3.tif  release_NaIO4_07-08-2025_3.tif  release_ProtK_02_06-11-2025_3.tif  release_ProtK_07-02-2025_8.tif  release_Untreated_07-08-2025_5.tif
src/: sweep_runner.py  utils.py
src/data_pipeline/: biofilm_preprocess.py  (+3 more)
(+647 files in other folders)
