[project]
name = "biofilm-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]
